# magplots

./: .zenodo.json  Examples.ipynb  Pc5-HSJ Analysis.ipynb  README.md  magFunctions.py  pyproject.toml  requirements.txt  selected_HSJ_events_with_notes.csv
.github/workflows/: pylint.yml
docs/: api.rst  conf.py  requirements.in  requirements.txt  usage.rst
magplots/: __init__.py  magFunctions.py
magplots/docs/: index.rst  requirements.txt
magplots/tests/: __init__.py  test_magplots.py
notebooks/: Event Downselection.ipynb  themis_event_list_with_coords.pkl
output/selected/: selected_events.csv
