[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
 
[project]
name = "magplots"
dynamic = ["version"]
license = {file = "LICENSE"}
authors = [
  { name="Kristina Collins", email="kvcollins@spacescience.org"},
  ]
description = "A python library for generating plots from conjugate magnetometers."
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "matplotlib",
    "pandas",
    "ai.cdas",
    "scipy"
    ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers"
    ]

[project.optional-dependencies]
test = [
     "coverage[toml]",
     "pylint",
]

[project.urls]
Homepage = "https://github.com/KCollins/magplots"
"Bug Tracker" = "https://github.com/KCollins/magplots/issues"
Changelog = "https://github.com/KCollins/magplots/releases"
source = "https://github.com/KCollins/magplots"
download = "https://github.com/KCollins/magplots/releases"

[tool.coverage.run]
relative_files = true
include = ["*/magplots/*",
           "*/magplots/tests/*"]

[tool.coverage.paths]
ocb_paths = ["magplots/",
             "*/lib/*/site-packages/magplots"]

[tool.setuptools]
packages = ["magplots"]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = "R0912,R0913,R0914,R0915,R0917,C0103,W0622,C0301,C0302,R1702"
